--- a/data/home.html
+++ b/data/home.html
@@ -1,66 +1,34 @@
 <!DOCTYPE HTML>
 <html>
-<style>
-    button {
-        background-color: rgb(45, 108, 243);
-        width: 100px;
-        color: #ffffff;
-    }
-
-    button:hover {
-        background-color: #45a049;
-    }
-
-    button {
-        width: 30%;
-        height: 44px;
-        border-radius: 4px;
-        margin: 10px auto;
-        font-size: 15px;
-    }
-
-    button {
-        border: 0;
-        padding: 0 15px
-    }
-
-    body {
-        text-align: center;
-        font-family: verdana, sans-serif;
-        border-radius: 5px;
-        background-color: rgb(23, 23, 23);
-        color: rgb(255, 255, 255);
-        padding: 20px;
-    }
-
-    div {
-        border-radius: 5px;
-        /* background-color: rgb(23, 23, 23); */
-        color: #ffffff;
-        padding: 20px;
-    }
-</style>
 
 <head>
-    <title>MDtronix Smart Swtich</title>
+    <title>MDtronix WTLC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>{{name}}</h1>
-    <div>
+    <h1>MDtronix WTLC</h1>
+    <!-- <div class="wrap">
+        <p>
+            <span>Level: {{level_req}}%</span>
+        </p>
+    </div> -->
+
+    <br><br>
+    <div class="wrap">
         <form action="/setting">
             <button>Setting</button>
         </form><br>
         <form action="/update">
             <button>Update</button>
         </form><br>
+        <hr>
         <form action="/rst">
-            <button>Restart</button>
-        </form><br>
-        <form action="/rstwifi">
-            <button>Reset WiFi</button>
+            <button class="rst">Restart</button>
         </form>
+        <br>
+        {{rst_wifi_set}}
     </div>
 </body>
 
